--- a/packages/pack/package.json
+++ b/packages/pack/package.json
@@ -4,14 +4,22 @@
   "description": "A tool for building and prepare components for publishing",
   "homepage": "https://github.com/bem/bem-react/tree/master/packages/pack",
   "repository": "https://github.com/bem/bem-react",
-  "keywords": ["bem", "build", "react"],
+  "keywords": [
+    "bem",
+    "build",
+    "react"
+  ],
   "bin": {
     "pack": "bin/pack"
   },
   "publishConfig": {
     "access": "public"
   },
-  "files": ["bin", "lib", "oclif.manifest.json"],
+  "files": [
+    "bin",
+    "lib",
+    "oclif.manifest.json"
+  ],
   "license": "MPL-2.0",
   "scripts": {
     "build:manifest": "oclif-dev manifest",
