--- a/packages/pack/package.json
+++ b/packages/pack/package.json
@@ -32,9 +32,11 @@
   },
   "dependencies": {
     "@oclif/command": "1.8.0",
+    "chalk": "4.1.0",
     "debug": "4.1.1",
     "fast-glob": "3.2.4",
     "fs-extra": "9.0.1",
+    "log-update": "4.0.0",
     "ora": "5.0.0",
     "postcss": "7.0.32"
   },
